[package]
name = "shuma-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "CLI de administración de shipote-daemon."

[[bin]]
name = "shuma"
path = "src/main.rs"

[dependencies]
shuma-card = { path = "../sandbox/shuma-card" }
shuma-protocol = { path = "../sandbox/shuma-protocol" }
card-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
